# xstd

./: .gitignore  CMakeLists.txt  README.md  __.clang-format  xstd.licenseheader  xstd.sln  xstd.vcxitems  xstd.vcxitems.filters  xstd.vcxproj  xstd.vcxproj.filters
includes/: ia32.hpp
includes/frozen/bits/: exceptions.h
includes/ia32/: apic.hpp  hde64.hpp  iospace.hpp  memory.hpp  pci.hpp  perfmon.hpp  smbios.hpp
includes/xstd/: algorithm.hpp  asn1.hpp  assert.hpp  async.hpp  async_generator.hpp  async_stream.hpp  async_thread.hpp  atomic_hashmap.hpp  atomic_slist.hpp  base_n.hpp  bitmap.hpp  bitwise.hpp  bmp.hpp  chore.hpp  circular_buffer.hpp  color.hpp  concurrent_arena.hpp  concurrent_hashmap.hpp  conditional_lock.hpp  coro.hpp  coro_arena.hpp  crc.hpp  crc32.hpp  datalen.hpp  deferred_value.hpp  duplex.hpp  enum_name.hpp  environment.hpp  event.hpp  fetch_once.hpp  fiber.hpp  fields.hpp  file.hpp  file_view.hpp  finally.hpp  flat_map.hpp  fnv.hpp  fnv64.hpp  formatting.hpp  frozen.hpp  (+76 more)
